--- a/nav-bar/style.css
+++ b/nav-bar/style.css
@@ -1,22 +1,54 @@
-nav{
-    width: 100%;
-    height: 60px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+:root{
+    --nav-dark: #1a1a1a;
+    --nav-light: #f5f5f5;
+}
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap');
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: var(--nav-dark);
+}
+li , a , button{
+    font-family: Playwrite NG Modern;
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--nav-light);
+    text-decoration: none;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
 }
 
-ul{
-    float: right;
-    margin-right: 20px;
-    display: flex;
-    list-style: none;   
+.logo{
+    cursor: pointer;
+    margin-right: auto;
 }
-li{
-    padding : 10px;
+.nav_links{
+    list-style: none;
 }
-li>a{
-    text-decoration: none;
-    color: #000;
-    padding: 10px;
+.nav_links li{
+    display: inline-block;
+    padding: 0px 20px;
 }
-    
+.nav_links li a{
+    transition: all 0.3s ease 0s;
+}
+.nav_links li a:hover{
+    color: #0088a9;
+}
+button{
+    margin-left: 20px;
+    padding: 9px 25px;
+    background-color: rgba(0,136,169,1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+button:hover{
+    background-color: rgba(0,136,169,0.8);
+}
