--- a/loading_page/style.css
+++ b/loading_page/style.css
@@ -1,16 +1,16 @@
 body{
-    background-color: black;
+    background-color: rgba(0, 0, 0);
 }
 .loader {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 10px solid #f3f3f3; /* Light grey border */
-    border-top: 10px solid #3498db; /* Blue border on top */
+    border: 8px solid #f3f3f3; /* Light grey border */
+    border-top: 8px solid #3498db; /* Blue border on top */
     border-radius: 50%; /* Makes the loader circular */
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     animation: spin 0.81s linear infinite; /* Rotate animation */
 }
 
