--- a/footer/style.css
+++ b/footer/style.css
@@ -5,13 +5,13 @@
 
 body{
     min-height: 100vh;
-    color: white;
-    background-color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 nav{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
 }
 nav ul{
@@ -33,12 +33,12 @@ nav a{
     text-decoration: none;
     display: flex;
     align-items: center;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 nav a:hover{
-    background-color: rgba(0, 0, 0, 0.429);
-    color:rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.74);
+    color:rgb(0, 0, 0);
 }
 
 nav li :first-child{
@@ -72,12 +72,12 @@ nav li :first-child{
 }
 
 footer {
-    margin-top:240px;
-    background-color: #f1f1f1;
+    margin-top: 250px;
+    background-color: #000000;
     padding: 20px;
     text-align: center;
     font-size: 14px;
-    color: #333;
+    color: #ffffff;
     height: 100%;
     
 }
